# chapters

./: .dockerignore  README.md  docker-compose.yml  pyproject.toml
backend/: .env.example  .gitignore  Dockerfile  README.md  alembic.ini  docker-entrypoint.sh  pyproject.toml
backend/alembic/: env.py
backend/alembic/versions/: 001_create_core_models.py
backend/app/: __init__.py  config.py  database.py  error_handlers.py  logging_config.py  main.py  middleware.py
backend/app/auth/: __init__.py  router.py  schemas.py  security.py
backend/app/btl/: __init__.py  router.py  schemas.py  service.py
backend/app/chapters/: __init__.py  router.py  schemas.py
backend/app/engagement/: __init__.py  router.py  schemas.py
backend/app/margins/: __init__.py  router.py  schemas.py
backend/app/media/: __init__.py  router.py  schemas.py  service.py
backend/app/models/: __init__.py  between_the_lines.py  book.py  chapter.py  embedding.py  engagement.py  margin.py  moderation.py  study.py  user.py
backend/app/moderation/: __init__.py  router.py  schemas.py
backend/app/muse/: __init__.py  embeddings.py  router.py  schemas.py  service.py
backend/app/privacy/: __init__.py  router.py  schemas.py
backend/app/services/: __init__.py  open_pages.py
backend/app/study/: __init__.py  router.py  schemas.py
backend/scripts/: README.md  seed_database.py
backend/tests/: test_all.py  test_all_features.py  test_api.py  test_auth.py  test_btl.py  test_chapters.py  test_engagement.py  test_library.py  test_models.py  test_moderation.py  test_study.py
docs/: CHANGELOG.md  (+12 more)
(+135 files in other folders)
